# bcphone

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  build-win.bat  qtquickcontrols2.conf  res.qrc
.github/: FUNDING.yml
cmake/: internal_utils.cmake
cmake/modules/: FindAVFoundation.cmake  FindAudioToolbox.cmake  FindCoreAudio.cmake  FindCoreFoundation.cmake  FindCoreMedia.cmake  FindCoreServices.cmake  FindCoreVideo.cmake  FindFoundation.cmake  FindSecurity.cmake
img/: bcphone.icns
platform/macos/: CustomDmg.json  Entitlements.plist  Info.plist.in  device_notifier.h  device_notifier.mm  dock_click_handler.h  dock_click_handler.mm
platform/win/: win_utils.cpp  win_utils.h
qml/: ActiveCalls.qml  CallHistory.qml  Chat.qml  Contacts.qml  Dialpad.qml  Playback.qml  Settings.qml  Theme.qml  main.qml
qml/custom/: BackButton.qml  ChatBubble.qml  ChatList.qml  ChatSend.qml  CustomButton.qml  CustomIconButton.qml  CustomMouseArea.qml  CustomTableView.qml  CustomTextField.qml  CustomTextFieldPwd.qml  CustomToolButton.qml  DialpadButton.qml  ImageButton.qml  LabelComboBox.qml  LabelSlider.qml  LabelTextField.qml  LabelTextFieldBrowser.qml  LabelTextFieldPwd.qml  LabelToolTip.qml  RegistrationStatus.qml  SearchTextField.qml  TextAreaWithScroll.qml
qml/dialog/: BusyDialog.qml  EditContactDialog.qml  IncomingCallDialog.qml  LoginDialog.qml  MessageDialog.qml
src/: config.h.cmake  logger.cpp  logger.h  main.cpp  network_reply_timeout.h  qmlhelpers.h  settings.cpp  settings.h  sip_client.cpp  sip_client.h  softphone.cpp  softphone.h
src/models/: active_call_model.cpp  active_call_model.h  audio_codecs.cpp  audio_codecs.h  audio_devices.cpp  audio_devices.h  call_history_model.cpp  call_history_model.h  chat_list.cpp  chat_list.h  chat_list_proxy.cpp  chat_list_proxy.h  contacts_model.cpp  contacts_model.h  generic_codecs.cpp  generic_codecs.h  generic_devices.h  messages_model.cpp  messages_model.h  messages_proxy_model.cpp  messages_proxy_model.h  model_constants.h  playback_model.cpp  playback_model.h  presence_model.cpp  presence_model.h  ring_tones_model.cpp  ring_tones_model.h  video_codecs.cpp  video_codecs.h  video_devices.cpp  video_devices.h
src/platform/: win_utils.cpp  win_utils.h
test/: main.cpp
tools/: README.txt  build-bcg729.bat  build-bcg729.sh  build-pjsip-macos.sh  conanfile.txt  config_site_macos.h  config_site_win.h  gen_icns.sh  setup-dev-env.ps1
